<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#00000000">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_weight="0.4">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="70dp"
                android:layout_marginLeft="10dp"
                android:layout_marginHorizontal="30dp"
                android:scaleType="fitCenter"
                android:src="@drawable/title_font"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/account_input"
                style="@style/Widget.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:layout_marginHorizontal="20dp"
                app:endIconMode="clear_text"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/account_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:digits="0123456789"
                    android:contentDescription="请输入用户名"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input"
                style="@style/Widget.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:hint="@string/hint_password"
                app:errorEnabled="true"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789abcdefghijklmnopqrstuvwxyz_"
                    android:contentDescription="请输入密码"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="40dp"
            android:layout_weight="0.2"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_next"
                android:textSize="24dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/face_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="人脸登录"
                android:textSize="24dp"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.2"
        android:padding="30dp">

        <TextView
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="注册账号"
            android:textSize="18dp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/forget_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="忘记密码"
            android:textSize="18dp"
            android:textColor="@color/black" />

    </LinearLayout>

    </LinearLayout>


</FrameLayout>