<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/aqua">
    </LinearLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/recruit"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/job_border"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/position"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/test"
                />

            <TextView
                android:id="@+id/salary"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.35"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/test"
                />

            <TextView
                android:id="@+id/number"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/test"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/company"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/test"
            />

        <TextView
            android:id="@+id/address"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/test"
            />

        <TextView
            android:id="@+id/contact"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/test"
            />

        <TextView
            android:id="@+id/require"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/test"
            />

    </LinearLayout>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/resume"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/job_border"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/job_border">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="姓名  "
                        />

                    <EditText
                        android:id="@+id/name"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_marginTop="5dp"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:gravity="center"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="性别  "
                        />

                    <CheckBox
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="16sp"
                        android:text="男"/>

                    <CheckBox
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="16sp"
                        android:text="女"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/job_border">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="年龄  "
                        />

                    <EditText
                        android:id="@+id/age"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_marginTop="5dp"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:gravity="center"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="学历  "
                        />

                    <EditText
                        android:id="@+id/education"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_marginTop="5dp"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:gravity="center"
                        />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/job_border">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="联系方式  "
                    />

                <EditText
                    android:id="@+id/phone"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/job_border">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="自我简述  "
                    />

                <EditText
                    android:id="@+id/introduction"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    />

            </LinearLayout>

        </LinearLayout>
        
    </LinearLayout>

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/button_style"
        android:text="投递简历"
        android:textSize="20dp" />

</LinearLayout>